k8s/keycloak-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-cluster-ip-service
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
