k8s/mulkiiweb-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mulkiiweb-cluster-ip-service
  labels:
    app: mulkiiweb
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: mulkiiweb
  type: ClusterIP
