k8s/ingress-service.yml
# apiVersion: networking.k8s.io/v1beta1
# # UPDATE THE API
# kind: Ingress
# metadata:
#   name: ingress-service
#   namespace: default
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   rules:
#   - host: mulkii.com
#     http:
#       paths:  
#       - path: /
#         backend:
#           serviceName: mulkiiweb-cluster-ip-service
#           servicePort: 3000
#       - path: /api(/|$)(.*)
#         backend:
#           serviceName: mulkiiapi-cluster-ip-service
#           servicePort: 8000
#       - path: /keycloak(/|$)(.*)
#         backend:
#           serviceName: keycloak
#           servicePort: 8080

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-service
  namespace: default
spec:
  rules:
  - host: mulkii.com
    http:
      paths:
      - backend:
          serviceName: mulkiiweb-cluster-ip-service
          servicePort: 3000
        path: /
      - backend:
          serviceName: mulkiiapi-cluster-ip-service
          servicePort: 8000
        path: /api(/|$)(.*)
      - backend:
          serviceName: keycloak-cluster-ip-service
          servicePort: 8080
        path: /kimlikdogrula(/|$)(.*)
